# src/app/services/models.ts
@@ -10,5 +10,4 @@ export { Links } from './models/links';
 export { PagedModelEntityModelStock } from './models/paged-model-entity-model-stock';
 export { PageMetadata } from './models/page-metadata';
 export { RepresentationModelObject } from './models/representation-model-object';
-export { StockDto } from './models/stock-dto';
 export { StockRequestBody } from './models/stock-request-body';
