# src/app/services/models/stock-dto.ts
@@ -1,8 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export interface StockDto {
-  exchange?: string;
-  name?: string;
-  price?: number;
-  symbol?: string;
-}
