# src/app/services/models/stock-request-body.ts
@@ -1,15 +1,59 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface StockRequestBody {
+  address?: string;
+  analystRatingBuy?: string;
+  analystRatingHold?: string;
+  analystRatingSell?: string;
+  analystRatingStrongBuy?: string;
+  analystRatingStrongSell?: string;
+  analystTargetPrice?: string;
+  assetType?: string;
+  beta?: string;
+  bookValue?: string;
+  cik?: string;
+  country?: string;
   createdDate?: string;
+  currency?: string;
+  description?: string;
+  dilutedEPSTTM?: string;
+  dividendDate?: string;
+  dividendPerShare?: string;
+  dividendYield?: string;
+  ebitda?: string;
+  eps?: string;
+  evtoEBITDA?: string;
+  evtoRevenue?: string;
+  exDividendDate?: string;
   exchange?: string;
-  financialInfos?: Array<string>;
+  fiscalYearEnd?: string;
+  forwardPE?: string;
+  grossProfitTTM?: string;
   id?: number;
   industry?: string;
   lastModifiedDate?: string;
+  latestQuarter?: string;
+  marketCapitalization?: string;
+  movingAverage200Day?: string;
+  movingAverage50Day?: string;
   name?: string;
-  price?: number;
+  operatingMarginTTM?: string;
+  pegratio?: string;
+  peratio?: string;
+  priceToBookRatio?: string;
+  priceToSalesRatioTTM?: string;
+  profitMargin?: string;
+  quarterlyEarningsGrowthYOY?: string;
+  quarterlyRevenueGrowthYOY?: string;
+  returnOnAssetsTTM?: string;
+  returnOnEquityTTM?: string;
+  revenuePerShareTTM?: string;
+  revenueTTM?: string;
   sector?: string;
+  sharesOutstanding?: string;
   symbol?: string;
   tradeHistories?: Array<string>;
+  trailingPE?: string;
+  week52High?: string;
+  week52Low?: string;
 }
